# Timetable_SPBU_bot

./: .dockerignore  .env.dist  .gitignore  .pylintrc  Docker-compose.yml  LICENSE  README.md  alembic.ini  app.py  bot.py  docker-compose.yml  dockerfile  loader.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  pylint.yml
alembic/: env.py
alembic/versions/: 12b7d26b01d7_language_of_user_in_settings.py  9474559c591d_first_migration.py  9bea9b771933_language_of_user_in_settings.py  ed233dc913af_deleting_schedule_tables.py
alembic_migrations/: env.py
alembic_migrations/versions/: 12b7d26b01d7_language_of_user_in_settings.py  6131a8840662_adding_indexes.py  b351ee68c259_init.py  d9ac61bb65f9_add_is_bot_blocked_field.py  ed233dc913af_deleting_schedule_tables.py
data/: config.py
data/compiled_html_pages/: schedule.html
data/html_templates/: day_schedule.html  empty_day.html  event.html  events_day.html  footer.html  header.html  long_break.html  schedule.html  schedule_header.html  week_schedule.html
data/pdoc_templates/: syntax-highlighting.css
data/styles/: index.scss  reset.scss  utils.scss
data/styles/modules/: annotation.scss  content.scss  day.scss  event.scss  footer.scss  header.scss  subject.scss
handlers/errors/: error_handler.py
handlers/users/: __init__.py  choice_group.py  choice_teacher.py  help.py  helpers.py  settings.py  start.py  student_navigation.py  timetable.py  user_status.py
handlers/users/commands/: __init__.py  educator.py  group.py  help.py  my_schedule.py  settings.py  start.py
keyboards/inline/: callback_data.py  choice_group_buttons.py  choice_teacher_buttons.py  choice_user_status_buttons.py  schedule_subscription_buttons.py  settings_buttons.py  student_navigaton_buttons.py  timetable_buttons.py
middlewares/: throttling.py
states/: __init__.py  choice_group.py  choice_teacher.py
tgbot/: __init__.py  cb_data.py  commands.py  config.py  data_classes.py  loader.py  notifications.py  notify_admins.py  set_bot_commands.py
tgbot/constants/: commands.py
tgbot/filters/: __init__.py  admin.py
tgbot/handlers/: __init__.py  admin.py  blocking.py  commands.py  errors.py  helpers.py  schedule.py  search_educator.py  search_group.py  searching.py  settings.py  start.py  start_menu.py  student_navigation.py  unexpected_message.py  unexpected_updates.py  user.py
tgbot/handlers/errors/: error_handler.py
tgbot/handlers/users/: __init__.py  choice_group.py  choice_teacher.py  (+6 more)
tgbot/keyboards/: __init__.py  inline.py
tgbot/middlewares/: __init__.py  action.py  config.py  language_18n.py  throttling.py
tgbot/misc/: __init__.py  cb_data.py  logging.py  states.py
tgbot/services/: __init__.py  broadcaster.py  getting_shedule.py  image_converter.py  initial_filling_of_groups.py  notifications.py  statistics.py
tgbot/states/: __init__.py  choice_group.py  choice_teacher.py
utils/: __init__.py  get_timetable.py  notify_admins.py  set_bot_commands.py  timetable_parsers.py  tt_api.py
utils/db_api/: __init__.py  database.py  db_commands.py  db_group_timetable.py  db_models.py  db_teacher_timetable.py  db_timetable.py  initial_filling_of_db.py  updating_of_db.py
utils/image_converter/: converter.py  new_converter.py
utils/misc/: logging.py
utils/timetable/: __init__.py  api.py  get_group_timetable.py  get_teacher_timetable.py  get_timetable.py  helpers.py  parsers.py
(+35 files in other folders)
