[tool.poetry]
name = "timetable-spbu-bot"
version = "2.0"
description = ""
authors = ["vad-ii-k <sazanov7615@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
aiogram = "^3.12.0"
aiohttp-socks = "^0.9.0"
alembic = "^1.13.2"
apscheduler = "^3.10.4"
babel = "^2.16.0"
cashews = "^7.3.0"
environs = "^11.0.0"
gino = "^1.0.1"
jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.9"
pyppeteer = "^2.0.0"
python = "^3.12"
redis = "^5.0.8"
setuptools = "^73.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pdoc = "^12.3.1"
pylint = "^2.17.7"
pytest = "^7.4.4"
pytest-asyncio = "^0.20.3"

[tool.black]
target-version = ['py312']
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
line_length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120 # Maximum number of lines in a module.
disable = 'R0903, E0213, C0209' # too-few-public-methods, no-self-argument, consider-using-f-string
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
